[Long.Le] update readme

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 # API
-api_personal_token = <add your github token>
+api_personal_token = 57ef6289c406f387ab885e4c3c855d938c358550
